--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -44,6 +44,8 @@ jobs:
 
           sed -i '' 's/MARKETING_VERSION = $version/MARKETING_VERSION = $newVersion/' "$file"
 
+          xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2
+
           git status
       - name: 生成标签
         run: |
