--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -18,13 +18,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: 更新构建号
-        uses: yanamura/ios-bump-version@v1
       - name: 更新版本号
         run: |
           # 读取文件中的版本号
           version=$(xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2)
           version=${version# }
+
+          echo "旧版本号->$version"
 
           # 将版本号拆分为数组
           IFS='.' read -r -a versionArray <<< "$version"
@@ -35,7 +35,7 @@ jobs:
           # 重新组合版本号
           newVersion="${versionArray[0]}.${versionArray[1]}.${versionArray[2]}"
 
-          echo $newVersion
+          echo "新版本号->$version"
 
           # 新版本号写入文件
           file=$(find . -type f -name "*.pbxproj" | head -n 1)
@@ -44,9 +44,12 @@ jobs:
 
           sed -i '' 's/MARKETING_VERSION = $version/MARKETING_VERSION = $newVersion/' "$file"
 
-          xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2
+          updatedVersion=$(xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2)
+          echo "更新后的版本号->$updatedVersion"
 
           git status
+      - name: 更新构建号
+        uses: yanamura/ios-bump-version@v1
       - name: 生成标签
         run: |
           version=$(xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2)
