--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -35,14 +35,14 @@ jobs:
           # 重新组合版本号
           newVersion="${versionArray[0]}.${versionArray[1]}.${versionArray[2]}"
 
-          echo "新版本号->$version"
+          echo "新版本号->$newVersion"
 
           # 新版本号写入文件
           file=$(find . -type f -name "*.pbxproj" | head -n 1)
 
-          echo $file
+          echo "新版本号将要写入文件\n$file"
 
-          sed -i '' 's/MARKETING_VERSION = $version/MARKETING_VERSION = $newVersion/' "$file"
+          sed -i '' 's/MARKETING_VERSION = $version/MARKETING_VERSION = $newVersion/g' "$file"
 
           updatedVersion=$(xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2)
           echo "更新后的版本号->$updatedVersion"
