--- a/Signing.entitlements
+++ b/Signing.entitlements
@@ -6,6 +6,7 @@
 	<string>development</string>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
+		<string>iCloud.yueyi.cisum2</string>
 		<string>iCloud.yueyi.cisum</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
@@ -14,6 +15,7 @@
 	</array>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
+		<string>iCloud.yueyi.cisum2</string>
 		<string>iCloud.yueyi.cisum</string>
 	</array>
 	<key>com.apple.security.app-sandbox</key>
