--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -45,7 +45,7 @@ jobs:
 
           sed -i '' "s/MARKETING_VERSION = $version/MARKETING_VERSION = $newVersion/" "$projectFile"
 
-          updatedVersion=$(xcodebuild -showBuildSettings -quiet | grep -m 1 MARKETING_VERSION | cut -d= -f2)
+          updatedVersion=$(grep -o 'MARKETING_VERSION = [^"]*' $projectFile | head -n 1 | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+')
           echo "更新后的版本号->$updatedVersion"
 
           git status
