--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,11 +4,11 @@ on:
   push:
     tags:
       - '*'
-  # workflow_run:
-  #   workflows:
-  #     - 'Bump'
-  #   types:
-  #     - completed
+  workflow_run:
+    workflows:
+      - 'Bump'
+    types:
+      - completed
 
 permissions:
   contents: write
