--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -1,12 +1,12 @@
-name: Release
+name: Pre Release
 
 on:
   push:
     tags:
-      - '*v'
+      - '*pre'
   workflow_run:
     workflows:
-      - 'Bump'
+      - 'Pre Bump'
     types:
       - completed
 
@@ -42,6 +42,7 @@ jobs:
         with:
           tag_name: ${{ env.tag }}
           body_path: ${{ github.workspace }}-CHANGELOG.txt
+          prerelease: true
           files: |
             ./**/*.dmg
             ./**/*.zip
