--- a/.github/workflows/pro-bump.yaml
+++ b/.github/workflows/pro-bump.yaml
@@ -1,3 +1,5 @@
+name: Pro Bump
+
 on:
   push:
     branches:
@@ -5,8 +7,6 @@ on:
 
 permissions:
   contents: write
-
-name: Bump
 
 env:
   tag: ${{ github.event.head_commit.id }}
