--- a/.github/workflows/pre-bump.yaml
+++ b/.github/workflows/pre-bump.yaml
@@ -64,7 +64,7 @@ jobs:
 
           build=$(agvtool what-version -terse)
 
-          echo "tag=p$version($build)" >> $GITHUB_ENV
+          echo "tag=p$version" >> $GITHUB_ENV
       - name: 打标签并推送到仓库
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
