🎨 Auto Committed by GitOK

--- a/Products.plist
+++ b/Products.plist
@@ -18,6 +18,8 @@
 	<string>🎉</string>
 	<key>com.yueyi.cisum.pro.annual</key>
 	<string>👑</string>
+	<key>com.yueyi.cisum.pro.yearly</key>
+	<string>👑</string>
 	<key>com.yueyi.cisum.pro.year.1</key>
 	<string>👑</string>
 	<key>com.yueyi.cisum.pro.month.1</key>
