--- a/Products.plist
+++ b/Products.plist
@@ -16,10 +16,16 @@
 	<string>🏎</string>
 	<key>com.yueyi.cisum.pro.monthly</key>
 	<string>🎉</string>
+	<key>com.yueyi.cisum.monthly</key>
+	<string></string>
 	<key>com.yueyi.cisum.pro.annual</key>
 	<string>👑</string>
+	<key>com.yueyi.cisum.annual</key>
+	<string></string>
 	<key>com.yueyi.cisum.pro.yearly</key>
 	<string>👑</string>
+	<key>com.yueyi.cisum.yearly</key>
+	<string></string>
 	<key>com.yueyi.cisum.pro.year.1</key>
 	<string>👑</string>
 	<key>com.yueyi.cisum.pro.month.1</key>
