--- a/Signing.entitlements
+++ b/Signing.entitlements
@@ -17,6 +17,8 @@
 	<array>
 		<string>iCloud.yueyi.cisum</string>
 	</array>
+	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
