🐎 Improve:  Enhance existing functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,10 @@
         "autoconnect",
         "circlepath",
         "Cisum"
-    ]
+    ],
+    "editor.quickSuggestions": {
+        "comments": "off",
+        "strings": "off",
+        "other": "off"
+    }
 }
