🔧 Config:  Update configuration settings

--- a/Products.plist
+++ b/Products.plist
@@ -31,6 +31,6 @@
 	<key>com.yueyi.cisum.pro.month.1</key>
 	<string>🎉</string>
 	<key>com.yueyi.cisum.pro.day.7</key>
-	<string>🍮</string>
+	<string>☕️</string>
 </dict>
 </plist>
