--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "cSpell.words": [
         "autoconnect",
         "circlepath",
-        "Cisum"
+        "Cisum",
+        "pbxproj"
     ],
     "editor.quickSuggestions": {
         "comments": "off",
