🐛 Bugfix:  Fix a bug

--- a/.github/workflows/pro-release.yaml
+++ b/.github/workflows/pro-release.yaml
@@ -37,7 +37,7 @@ jobs:
 
           echo "tag=v$version" >> $GITHUB_ENV
       # - name: Generate Changelog
-      #   run: echo "因为需要审核，APP商店的版本会比这里的版本旧很多。macOS、iOS版本在这里：[前往App Store](https://apps.apple.com/cn/app/cisum/id6466401036)"> ${{ github.workspace }}-CHANGELOG.txt
+        run: echo "[前往App Store](https://apps.apple.com/cn/app/cisum/id6466401036)"> ${{ github.workspace }}-CHANGELOG.txt
       - uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.tag }}
