--- a/.github/workflows/pro-release.yaml
+++ b/.github/workflows/pro-release.yaml
@@ -36,7 +36,7 @@ jobs:
           build=$(agvtool what-version -terse)
 
           echo "tag=v$version" >> $GITHUB_ENV
-      # - name: Generate Changelog
+      - name: Generate Changelog
         run: echo "[前往App Store](https://apps.apple.com/cn/app/cisum/id6466401036)"> ${{ github.workspace }}-CHANGELOG.txt
       - uses: softprops/action-gh-release@v1
         with:
