🎨 Chore: Remove deprecated Dev preview files and update related components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "autoconnect",
         "circlepath",
         "Cisum",
+        "fileprivate",
         "pbxproj"
     ],
     "editor.quickSuggestions": {
