👷 CI: Update pro-release workflow and VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "cSpell.words": [
+        "agvtool",
         "autoconnect",
         "circlepath",
         "Cisum",
         "fileprivate",
-        "pbxproj"
+        "pbxproj",
+        "softprops"
     ],
     "editor.quickSuggestions": {
         "comments": "off",
