🎨 Chore: Remove README-DEV.md and update VS Code settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "autoconnect",
         "circlepath",
         "Cisum",
+        "Coffic",
         "fileprivate",
         "pbxproj",
         "softprops"
