--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Cisum",
         "Coffic",
         "fileprivate",
+        "nonisolated",
         "pbxproj",
         "softprops"
     ],
