🐎 Improve:  Enhance existing functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "circlepath",
         "Cisum",
         "Coffic",
+        "externaldrive",
         "fileprivate",
         "nonisolated",
         "pbxproj",
