feat(ci): implement beta version iteration with semantic versioning
Add comprehensive beta version management system that supports
iteration numbers (beta.1, beta.2) and intelligent version bumping
based on commit types. Main branch now only releases the latest
beta version, skipping intermediate unreleased versions.

Beta Version Management:
- Add calculate-beta-version.sh to handle iteration numbering
- Add should-bump-base-version.sh to detect feature commits
- Pre branch: increments base version for features, iteration for fixes
  Example: 3.1.6-beta.1 → 3.1.6-beta.2 (fixes)
           3.1.6-beta.3 → 3.1.7-beta.1 (features)

Release Strategy:
- Main branch: releases only latest beta (e.g., v3.1.7)
- Skips intermediate versions (e.g., 3.1.6) if unreleased
- Reduces version fragmentation and improves user experience

Updated Files:
- .github/workflows/pre-bump.yaml: smart version detection
- .github/workflows/pre-release.yaml: beta.* tag pattern
- .github/workflows/pro-bump.yaml: latest-beta release logic
- scripts/calculate-beta-version.sh: iteration logic
- scripts/get-latest-beta-version.sh: find latest beta
- scripts/should-bump-base-version.sh: commit type detection
- docs/beta-version-workflow.md: comprehensive documentation

Tag Format Changes:
- Old: p3.1.6 (non-standard)
- New: 3.1.6-beta.1 (SemVer compliant)
- Release: v3.1.7 (formal release)

--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -3,7 +3,7 @@ name: Pre Release
 on:
   push:
     tags:
-      - '*p_stop'
+      - '*-beta.*'
   # workflow_run:
   #   workflows:
   #     - 'Pre Bump'
@@ -25,17 +25,18 @@ jobs:
       - run: ls -alhR
       - name: 读取版本号
         run: |
-          # 读取配置文件路径
-          projectFile=$(find $(pwd) -type f -name "*.pbxproj" | head -n 1)
+          # 从 Git ref 中提取标签名称
+          TAG_NAME=${GITHUB_REF#refs/tags/}
 
-          # 读取文件中的版本号
-          version=$(grep -o 'MARKETING_VERSION = [^"]*' $projectFile | head -n 1 | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+')
+          # 提取版本号（去掉 -beta.N 后缀）
+          VERSION=$(echo "$TAG_NAME" | sed -E 's/-beta\.[0-9]+$//')
 
-          echo "版本号->$version"
+          echo "标签名->$TAG_NAME"
+          echo "版本号->$VERSION"
 
           build=$(agvtool what-version -terse)
 
-          echo "tag=p$version" >> $GITHUB_ENV
+          echo "tag=$TAG_NAME" >> $GITHUB_ENV
       - name: Generate Changelog
         run: echo ""> ${{ github.workspace }}-CHANGELOG.txt
       - uses: softprops/action-gh-release@v1
