--- a/.github/workflows/pre-release.yaml
+++ b/.github/workflows/pre-release.yaml
@@ -38,7 +38,11 @@ jobs:
 
           echo "tag=$TAG_NAME" >> $GITHUB_ENV
       - name: Generate Changelog
-        run: echo ""> ${{ github.workspace }}-CHANGELOG.txt
+        run: |
+          chmod +x scripts/generate-changelog.sh
+          ./scripts/generate-changelog.sh "${{ github.workspace }}-CHANGELOG.txt"
+      - name: Display Changelog
+        run: cat "${{ github.workspace }}-CHANGELOG.txt"
       - uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.tag }}
